mirrorgate-dashboard/src/sass/partials/_header.scss
/*!
 * Copyright 2017 Banco Bilbao Vizcaya Argentaria, S.A.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.header{
    align-items: center;
    background-color: $header-bg;
    flex-wrap: nowrap;
    justify-content: space-between;
    padding: 0 15px;
    width: 100%;

    &.component-host, &.component-wrapper {
      padding: 0;
    }

    .logos{
        flex: 0 1 55px;
    }

    .logo--mg{
        position: absolute;
        clip: rect(0, 30px, 30px, 0px);
        top: 8px;
        left: 10px;
    }

    .board-title {
      flex: 0 1 30%;
    }

    .menu{
        flex: 0 1 90px;
        text-align: right;

        button{
            background: none;
            border: none;
            color: $header-color;

            &[aria-expanded="true"]{
                background-color: darken(white, 10);
            }

            &:hover,
            &:focus {
                opacity: 0.7;
            }
        }

        .dropdown{

            .dropdown-menu {
                font-size: $level-4;
                left: auto;
                right: 0;

                .dropdown-header {
                    font-size: $level-6;
                    text-transform: uppercase;
                }

                a:hover,
                a:focus{
                    background-color: darken(white, 10);
                }
            }
        }
    }
    img{
        max-height: $header-height - 15;
        max-width: 100%;
    }
}

details-dashboard{
    flex: 0 1 100%;
    max-width: 80%;
}

@media all and (min-width: $m){
    .header{
        .logos{
            flex: 0 1 30%;
        }

        .logo--mg{
            position: static;
        }

        .menu{
            flex: 0 1 30%;
            text-align: right;
        }
    }
}

@media all and (min-width: $l) {
    .header{

        .menu{
          button{
            font-size: $level-3 * 1.25;
          }
        }
    }
}

